finished doing homework

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,13 +77,20 @@
           <ul class="portfolio__gellery gellery-portfolio">
             <li class="gellery-portfolio__item item">
               <a href="" class="gallery-portfolio__link">
-                <img
-                  src="./images/portfolio-computer.jpg"
-                  alt="computer"
-                  class="gellery-portfolio__image"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-portfolio__wrapper">
+                  <img
+                    src="./images/portfolio-computer.jpg"
+                    alt="computer"
+                    class="gellery-portfolio__image"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-portfolio__wrapper-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="gellery-portfolio__contant">
                   <h2 class="gellery-portfolio__title">Технокряк</h2>
                   <p class="gallery-portfolio__text">Веб-сайт</p>
@@ -92,13 +99,20 @@
             </li>
             <li class="gellery-portfolio__item item">
               <a href="" class="gallery-portfolio__link">
-                <img
-                  src="./images/portfolio-basketball.jpg"
-                  alt="basketball"
-                  class="gellery-portfolio__image"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-portfolio__wrapper">
+                  <img
+                    src="./images/portfolio-basketball.jpg"
+                    alt="basketball"
+                    class="gellery-portfolio__image"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-portfolio__wrapper-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="gellery-portfolio__contant">
                   <h2 class="gellery-portfolio__title">Постер New Orlean vs Golden Star</h2>
                   <p class="gallery-portfolio__text">Дизайн</p>
@@ -107,13 +121,20 @@
             </li>
             <li class="gellery-portfolio__item item">
               <a href="" class="gallery-portfolio__link">
-                <img
-                  src="./images/portfolio-seafood.jpg"
-                  alt="Seafood"
-                  class="gellery-portfolio__image"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-portfolio__wrapper">
+                  <img
+                    src="./images/portfolio-seafood.jpg"
+                    alt="Seafood"
+                    class="gellery-portfolio__image"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-portfolio__wrapper-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="gellery-portfolio__contant">
                   <h2 class="gellery-portfolio__title">Ресторан Seafood</h2>
                   <p class="gallery-portfolio__text">Додаток</p>
@@ -122,13 +143,20 @@
             </li>
             <li class="gellery-portfolio__item item">
               <a href="" class="gallery-portfolio__link">
-                <img
-                  src="./images/portfolio-headphone.jpg"
-                  alt="headphone"
-                  class="gellery-portfolio__image"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-portfolio__wrapper">
+                  <img
+                    src="./images/portfolio-headphone.jpg"
+                    alt="headphone"
+                    class="gellery-portfolio__image"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-portfolio__wrapper-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="gellery-portfolio__contant">
                   <h2 class="gellery-portfolio__title">Проєкт Prime</h2>
                   <p class="gallery-portfolio__text">Маркетинг</p>
@@ -137,13 +165,20 @@
             </li>
             <li class="gellery-portfolio__item item">
               <a href="" class="gallery-portfolio__link">
-                <img
-                  src="./images/portfolio-boxes.jpg"
-                  alt="boxes"
-                  class="gellery-portfolio__image"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-portfolio__wrapper">
+                  <img
+                    src="./images/portfolio-boxes.jpg"
+                    alt="boxes"
+                    class="gellery-portfolio__image"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-portfolio__wrapper-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="gellery-portfolio__contant">
                   <h2 class="gellery-portfolio__title">Проєкт Boxes</h2>
                   <p class="gallery-portfolio__text">Додаток</p>
@@ -152,13 +187,20 @@
             </li>
             <li class="gellery-portfolio__item item">
               <a href="" class="gallery-portfolio__link">
-                <img
-                  src="./images/portfolio-monitor.jpg"
-                  alt="monitor"
-                  class="gellery-portfolio__image"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-portfolio__wrapper">
+                  <img
+                    src="./images/portfolio-monitor.jpg"
+                    alt="monitor"
+                    class="gellery-portfolio__image"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-portfolio__wrapper-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="gellery-portfolio__contant">
                   <h2 class="gellery-portfolio__title">Inspiration has no Borders</h2>
                   <p class="gallery-portfolio__text">Веб-сайт</p>
@@ -167,13 +209,20 @@
             </li>
             <li class="gellery-portfolio__item item">
               <a href="" class="gallery-portfolio__link">
-                <img
-                  src="./images/portfolio-book.jpg"
-                  alt="book"
-                  class="gellery-portfolio__image"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-portfolio__wrapper">
+                  <img
+                    src="./images/portfolio-book.jpg"
+                    alt="book"
+                    class="gellery-portfolio__image"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-portfolio__wrapper-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="gellery-portfolio__contant">
                   <h2 class="gellery-portfolio__title">Видання Limited Edition</h2>
                   <p class="gallery-portfolio__text">Дизайн</p>
@@ -182,13 +231,20 @@
             </li>
             <li class="gellery-portfolio__item item">
               <a href="" class="gallery-portfolio__link">
-                <img
-                  src="./images/portfolio-label.jpg"
-                  alt="label"
-                  class="gellery-portfolio__image"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-portfolio__wrapper">
+                  <img
+                    src="./images/portfolio-label.jpg"
+                    alt="label"
+                    class="gellery-portfolio__image"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-portfolio__wrapper-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="gellery-portfolio__contant">
                   <h2 class="gellery-portfolio__title">Проєкт LAB</h2>
                   <p class="gallery-portfolio__text">Маркетинг</p>
@@ -197,13 +253,20 @@
             </li>
             <li class="gellery-portfolio__item item">
               <a href="" class="gallery-portfolio__link">
-                <img
-                  src="./images/portfolio-business.jpg"
-                  alt="business"
-                  class="gellery-portfolio__image"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-portfolio__wrapper">
+                  <img
+                    src="./images/portfolio-business.jpg"
+                    alt="business"
+                    class="gellery-portfolio__image"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-portfolio__wrapper-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="gellery-portfolio__contant">
                   <h2 class="gellery-portfolio__title">Growing Business</h2>
                   <p class="gallery-portfolio__text">Додаток</p>
@@ -274,5 +337,6 @@
         </div>
       </div>
     </footer>
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
