--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 width="370"
                 height="294"
               />
+              <p class="work__text">Десктопні додатки</p>
             </li>
             <li class="work__item item">
               <img
@@ -132,6 +133,7 @@
                 width="370"
                 height="294"
               />
+              <p class="work__text">Мобільні додатки</p>
             </li>
             <li class="work__item item">
               <img
@@ -141,6 +143,7 @@
                 width="370"
                 height="294"
               />
+              <p class="work__text">Дизайнерське рішення</p>
             </li>
           </ul>
         </div>
